--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -7,9 +7,13 @@
 
 
 .footer__main {
-	margin-top: 4em;
 	padding: 2.5em 0;
 	color:  $light-copy;
+
+	h1, p {
+		margin-bottom: 20px;
+		margin-bottom: 1.25rem;
+	}
 
 	h1 {
 		color: $light-heading;
